@@ -253,7 +253,12 @@ namespace Mono.Unix {
 		}
 	}
 
-#if NET_2_0
+
+	//
+	// Right now using this attribute gives an assert because it
+	// isn't implemented.
+	//
+#if NET_2_0 && UNMANAGED_FN_PTR_SUPPORT_FIXED
 	[UnmanagedFunctionPointer (CallingConvention.Cdecl)]
 #endif
 	public delegate void SignalHandler (int signal);
